# mvcmi

./: LICENSE  README.md  README.rst  setup.cfg  setup.py
doc/: Makefile  api.rst  conf.py  index.rst
examples/: README.rst  plot_hcp_mvcmi.py
mvcmi/: __init__.py  algo.py  datasets.py  pca.py
