[metadata]
name = mvcmi
url = https://github.com/mvcmi/mvcmi
author = Mainak Jas
maintainer = Mainak Jas
maintainer_email = mainakjas@gmail.com
description = MVCMI: multivariate conditional mutual information
keywords = fmri, neuroscience, neuroimaging, connectivity
long_description = file: README.rst
long_description_content_type = text/markdown; charset=UTF-8
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  License :: OSI Approved
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
project_urls =
  Documentation = https://mvcmi.github.io
  Bug Reports = https://github.com/mvcmi/mvcmi/issues
  Source = https://github.com/mvcmi/mvcmi

[options]
python_requires = ~= 3.8
install_requires =
  numpy >= 1.20.2
  scipy >= 1.6.3
  pooch
  tqdm
  scikit-learn
  joblib
  matplotlib
packages = find:
include_package_data = True

[bdist_wheel]
universal = true
